RESOLVED FIXED103689
Initialize m_xpcConnection to null if the identifier doesn't have an XPC connection
https://bugs.webkit.org/show_bug.cgi?id=103689
Summary Initialize m_xpcConnection to null if the identifier doesn't have an XPC conn...
Anders Carlsson
Reported 2012-11-29 17:16:08 PST
Initialize m_xpcConnection to null if the identifier doesn't have an XPC connection
Attachments
Patch (1.62 KB, patch)
2012-11-29 17:17 PST, Anders Carlsson
darin: review+
Anders Carlsson
Comment 1 2012-11-29 17:17:38 PST
Simon Fraser (smfr)
Comment 2 2012-11-29 17:20:26 PST
Comment on attachment 176855 [details] Patch I think Connection::Connection() should null out m_xpcConnection too.
Anders Carlsson
Comment 3 2012-11-29 17:26:04 PST
Note You need to log in before you can comment on or make changes to this bug.