Initialize m_xpcConnection to null if the identifier doesn't have an XPC connection https://bugs.webkit.org/show_bug.cgi?id=103689

Reviewed by Darin Adler.

* Platform/CoreIPC/mac/ConnectionMac.cpp:
(CoreIPC::Connection::platformInitialize):

Canonical link: https://commits.webkit.org/121805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136190 268f45cc-cd09-0410-ab3c-d52691b4dbfc